re PR tree-optimization/26795 (ACATS ICE c37213d on x86 in valid_in_set, at tree-ssa-pre.c:1579)

2006-03-23  Andrew Pinski  <pinskia@physics.uc.edu>

        PR tree-opt/26795
        * tree-ssa-pre.c (create_value_expr_from): Don't reject
        expressions which have overflowed constants.

From-SVN: r112319